@@ -1,3 +1,13 @@
+2004-08-20  Nathaniel Smith  <njs@codesourcery.com>
+
+	* qm/__init__.py: Don't import or define 'lib_dir'.
+	* qmdist/command/install_data.py (install_data.run): Don't define
+	'lib_dir'.
+	* qm/common.py (get_lib_directory): Don't use 'lib_dir' and
+	'qm.prefix', but rather '__file__'.
+	* qm/test/base.py (get_extension_directories): Remove
+	now-redundant logic around call to 'get_lib_directory'.
+
 2004-05-28  Mark Mitchell  <mark@codesourcery.com>
 
 	* qm/test/qmtest (check_python_version): Clarify error message.
